# ghc-edit

./: .gitignore  README.md  Setup.hs  ghc-edit.cabal
Language/Haskell/: GhcEdit.hs
Language/Haskell/GhcEdit/: GhcEdit.hs
src/: GhcEdit.c  GhcEdit.hs
test/: Exp.hs  Test.hs
test/Data/: Blah.hs
